# structz

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  default.nix  flake.nix  shell.nix
.github/workflows/: tests.yml
cmake/: structzConfig.cmake
include/: avl_tree.h  binary_heap.h  bs_tree.h  btree.h  circular_list.h  doubly_linked_list.h  hash_map.h  hash_set.h  linked_list.h  queue.h  red_black_tree.h  stack.h  trie.h  vec.h
src/: linked_list.h  linked_list.hpp  trie.cpp  vector.hpp
src/test/: linked_list.cpp  vector.cpp
tests/: CMakeLists.txt  test_avl_tree.cpp  test_binary_heap.cpp  test_bs_tree.cpp  test_btree.cpp  test_circular_list.cpp  test_doubly_linked_list.cpp  test_hash_map.cpp  test_hash_set.cpp  test_linked_list.cpp  test_queue.cpp  test_red_black_tree.cpp  test_stack.cpp  test_vec.cpp
